# sage

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_FAQ.md  connect.html  docker-compose.sage-gui.yml  go.mod  go.sum  index.html  package.json  playwright.config.js  privacy.html  server.json
.claude/: settings.json
.github/: dependabot.yml
api/: openapi.yaml
deploy/: Dockerfile.abci  Dockerfile.node  docker-compose.det.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.v119-chaos.yml  docker-compose.yml  init-testnet.sh  init.sql
desktop/sage-shell/: Cargo.toml  tauri.conf.json
desktop/sage-shell/capabilities/: main.json
desktop/sage-shell/src/: control.rs  main.rs
desktop/sage-shell/ui/: index.html  recovery.css  recovery.js
docs/: ADMIN_BOOTSTRAP.md  ARCHITECTURE.md  BRAIN.md  FEDERATION.md  GETTING_STARTED.md  HOOKS.md  ISSUE_52_RECOVERY.md  README.md  ROADMAP.md  connect.html  desktop-shell-decision.md  index.html  medium-article-gains.md  native-app-daemon-contract.md  native-shell-quality-gates.md  privacy.html  v11.12-clean-machine-acceptance.md  v11.9-PLAN.md  v11.9-multiprocess-fault-harness.md  v11.9-state-sync-activation.md
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: async_example.py  complete_walkthrough.py  federation.py  full_lifecycle.py  multi_agent.py  org_setup.py  quickstart.py  rbac_clearance.py  sage_bridge_example.py
sdk/python/src/sage_sdk/: __init__.py  async_client.py  auth.py  client.py  models.py
sdk/python/tests/: test_async_client.py  test_client.py  test_domain_reassign.py  test_models.py  test_tls.py
(+712 files in other folders)
