[package]
name = "sage-shell"
version = "11.11.5"
description = "Additive native CEREBRUM shell"
authors = ["Dhillon Andrew Kannabhiran"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
getrandom = "=0.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "=2.11.2", features = [] }
tauri-plugin-deep-link = "=2.4.9"
tauri-plugin-single-instance = { version = "=2.4.3", features = ["deep-link"] }
url = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Memory",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_UI_Shell",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
