[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-sdk"
version = "0.1.0"
description = "Python SDK for (S)AGE ((Sovereign) Agent Governed Experience)"
authors = [{name = "Dhillon Andrew Kannabhiran", email = "dhillon@levelupctf.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]
